--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
 
 .light-mode {
   --color-primary: #FFFFFF;
-  --color-secondary: #15a0ca;
+  --color-secondary: #00ffff;
   --color-white: #454e56;
   --color-black: #000;
   --color-grey0: #f8f8f8;
@@ -158,7 +158,7 @@ section {
 }
 
 .theme-btn {
-  top: 5%;
+  top: 12.5%;
   right: 3%;
   width: 70px;
   height: 70px;
@@ -284,6 +284,8 @@ section {
 }
 .right-about .about-item .abt-text {
   padding: 1.5rem;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
   display: flex;
   flex-direction: column;
 }
@@ -465,6 +467,8 @@ section {
 .port-text {
   padding: 2rem 0;
   text-align: center;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .portfolios {
@@ -547,6 +551,8 @@ section {
 }
 .blogs .blog {
   position: relative;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
   background-color: var(--color-grey-5);
   border-radius: 5px;
   box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.1);
@@ -686,6 +692,7 @@ section {
   justify-content: center;
   align-items: center;
   align-self: flex-start;
+  margin-bottom: 3.5rem;
 }
 
 /*Independant-components*/
@@ -748,6 +755,8 @@ section {
 }
 .main-title h2 .bg-text {
   position: absolute;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   top: 50%;
   left: 50%;
   color: var(--color-grey-5);
@@ -827,10 +836,10 @@ section {
     padding-top: 2.5rem;
   }
   .portfolios {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
   .blogs {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
   }
   .main-title h2 {
     font-size: 4rem;
