--- a/styles/_media.scss
+++ b/styles/_media.scss
@@ -95,11 +95,11 @@
     }
 
     .portfolios{
-        grid-template-columns: 1fr 1fr;        
+        grid-template-columns: 1fr;        
     }
 
     .blogs{
-        grid-template-columns: 1fr 1fr;        
+        grid-template-columns: 1fr;        
     }  
 
     .main-title{
