--- a/styles/style.css
+++ b/styles/style.css
@@ -693,6 +693,34 @@ section {
   align-items: center;
   align-self: flex-start;
   margin-bottom: 3.5rem;
+  margin-top: 3.5rem;
+}
+.contact-content-con .right-contact button {
+  width: 270px;
+  height: 80px;
+  border: none;
+  outline: none;
+  background: var(--color-primary);
+  color: #fff;
+  font-size: 22px;
+  border-radius: 40px;
+  text-align: center;
+  box-shadow: 0 6px 20px -5px rgba(0, 0, 0, 0.4);
+  position: relative;
+  overflow: hidden;
+  cursor: pointer;
+}
+.contact-content-con .right-contact button:hover {
+  background-color: var(--color-secondary);
+}
+.contact-content-con .right-contact button:hover i {
+  color: var(--color-primary);
+}
+.contact-content-con .right-contact button i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.3rem;
 }
 
 /*Independant-components*/
