--- a/styles/style.scss
+++ b/styles/style.scss
@@ -721,7 +721,39 @@ section{
             align-items: center;
             align-self: flex-start;
             margin-bottom: 3.5rem;
+            margin-top: 3.5rem;
         }
+
+
+        button{
+            width: 270px;
+            height: 80px;
+            border: none;
+            outline: none;
+            background: var(--color-primary);
+            color: #fff;
+            font-size: 22px;
+            border-radius: 40px;
+            text-align: center;
+            box-shadow: 0 6px 20px -5px rgba(0,0,0,0.4);
+            position: relative;
+            overflow: hidden;
+            cursor: pointer;
+            &:hover{
+                background-color: var(--color-secondary);
+                i{
+                   color: var(--color-primary); 
+                }
+            }
+            i{
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 1.3rem;
+            }
+        }
+        
+
     }
     
        
