very last commit - send button color text Please enter the commit message for your changes. Lines starting

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -731,7 +731,7 @@ section{
             border: none;
             outline: none;
             background: var(--color-primary);
-            color: #fff;
+            color: rgb(10, 122, 0);
             font-size: 22px;
             border-radius: 40px;
             text-align: center;
