--- a/styles/style.css
+++ b/styles/style.css
@@ -22,16 +22,16 @@
 }
 
 .light-mode {
-  --color-primary: #FFFFFF;
-  --color-secondary: #00ffff;
-  --color-white: #454e56;
+  --color-primary: #105C73;
+  --color-secondary: #E8AAB9;
+  --color-white: #F5F5DC;
   --color-black: #000;
   --color-grey0: #f8f8f8;
   --color-grey-1: #6c7983;
   --color-grey-2: #6c7983;
   --color-grey-3: #6c7983;
   --color-grey-4: #454e56;
-  --color-grey-5: #f8f8f8;
+  --color-grey-5: #131212bb;
   --color-grey-6: #12181b;
 }
 
@@ -99,16 +99,7 @@ section {
 
 .active {
   display: block;
-  -webkit-animation: scaleAnim 1s ease-in-out;
-          animation: scaleAnim 1s ease-in-out;
-}
-@-webkit-keyframes scaleAnim {
-  0% {
-    transform: translateY(-100%) scaleY(0);
-  }
-  100% {
-    transform: translateY(0) scaleY(1);
-  }
+  animation: scaleAnim 1s ease-in-out;
 }
 @keyframes scaleAnim {
   0% {
@@ -158,7 +149,7 @@ section {
 }
 
 .theme-btn {
-  top: 12.5%;
+  top: 17.5%;
   right: 3%;
   width: 70px;
   height: 70px;
@@ -1011,5 +1002,57 @@ section {
   }
   .main-title h2 {
     font-size: 3rem;
+  }
+}
+@media screen and (max-height: 880px) {
+  .section {
+    padding: 7rem 6rem;
+  }
+  header {
+    padding: 0;
+  }
+  header .right-header {
+    padding: 0 !important;
+  }
+  .theme-btn {
+    width: 50px;
+    height: 50px;
+  }
+  .header-content {
+    grid-template-columns: 1fr;
+    padding-bottom: 6rem;
+  }
+  .left-header .h-shape {
+    display: none;
+  }
+  .header-content .left-header .image {
+    margin: 0 auto;
+    width: 50%;
+  }
+  .right-header {
+    grid-row: 1;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .right-header .name {
+    font-size: 2.5rem !important;
+  }
+  .header-content .right-header .picture {
+    grid-row: 0;
+    width: 90%;
+    margin: 0 auto;
+  }
+  .controlls {
+    top: auto;
+    bottom: 0;
+    flex-direction: row;
+    justify-content: center;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    background-color: var(--color-grey-5);
+  }
+  .controlls .control {
+    margin: 0.6rem 1rem !important;
   }
 }/*# sourceMappingURL=style.css.map */
