--- a/styles/style.scss
+++ b/styles/style.scss
@@ -35,7 +35,7 @@
     --color-grey-2: #6c7983;
     --color-grey-3: #6c7983;
     --color-grey-4: #454e56;
-    --color-grey-5: #A9A9A9;
+    --color-grey-5: #131212bb;
     --color-grey-6: #12181b;
 }
 
